--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fancy-new-file",
   "main": "./lib/fancy-new-file-view",
   "version": "0.4.0",
-  "description": "Create or open files and directories by typing a relative path.",
+  "description": "Create files and directories by typing a relative path.",
   "activationEvents": [
     "fancy-new-file:toggle"
   ],
